refactor: Ajuste de layout mobile

--- a/public/scali.html
+++ b/public/scali.html
@@ -203,135 +203,137 @@
             </h3>
         </section>
 
-        <section id="seven" class="main  right dark fullscreen section-nap-scroll">
-            <div class="left-section7">
-                <img src="images/S.png" alt="Imagem S" class="s-sec2">
-                <div class="text-logo">YOUR LIFE <span style="font-family: 'Brinnan-Light';
+        <div class="invert-on-mobile">
+            <section id="seven" class="main  right dark fullscreen section-nap-scroll">
+                <div class="left-section7">
+                    <img src="images/S.png" alt="Imagem S" class="s-sec2">
+                    <div class="text-logo">YOUR LIFE <span style="font-family: 'Brinnan-Light';
                  color: #f6f6f6;">
-                        IN FOCUS. </span>
+                            IN FOCUS. </span>
+                    </div>
                 </div>
-            </div>
-            <div class="right-section7">
-                <p class="about quiet4">Whether you're leaving for a
-                    weekend trip or coming home
-                    from Disneyland, home is the
-                    comfort of your soul.</p>
-                <img src="images/bags_family.png" alt="bags_family" class="bags_family">
-                <a href="#nine">
-                    <button class="button style2">REGISTER TODAY</button></a>
-            </div>
-        </section>
+                <div class="right-section7">
+                    <p class="about quiet4">Whether you're leaving for a
+                        weekend trip or coming home
+                        from Disneyland, home is the
+                        comfort of your soul.</p>
+                    <img src="images/bags_family.png" alt="bags_family" class="bags_family">
+                    <a href="#nine">
+                        <button class="button style2">REGISTER TODAY</button></a>
+                </div>
+            </section>
 
-        <section id="eight" class="main  right dark fullscreen section-nap-scroll">
-            <div class="swiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <picture>
-                            <source srcset="images/carousel-2/mobile-1.jpg" media="(max-width: 960px)" />
-                            <img class="d-block w-100" src="images/SCALI_ST1_15_Vignette_C_GIFT_R1.jpg"
-                                alt="Image 1" style="object-position: bottom center;">
-                        </picture>
+            <section id="eight" class="main  right dark fullscreen section-nap-scroll">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <picture>
+                                <source srcset="images/carousel-2/mobile-1.jpg" media="(max-width: 960px)" />
+                                <img class="d-block w-100" src="images/SCALI_ST1_15_Vignette_C_GIFT_R1.jpg"
+                                    alt="Image 1" style="object-position: bottom center;">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide">
+                            <picture>
+                                <source srcset="images/carousel-2/mobile-2.jpg" media="(max-width: 960px)" />
+                                <img class="d-block w-100" src="images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg"
+                                    alt="Image 2">
+                            </picture>
+                        </div>
+                        <div class="swiper-slide">
+                            <picture>
+                                <source srcset="images/carousel-2/mobile-3.jpg" media="(max-width: 960px)" />
+                                <img class="d-block w-100" src="images/SCALI_ST1_13_Vignette_A_GIFT_R1.jpg"
+                                    alt="Image 3">
+                            </picture>
+                        </div>
                     </div>
-                    <div class="swiper-slide">
-                        <picture>
-                            <source srcset="images/carousel-2/mobile-2.jpg" media="(max-width: 960px)" />
-                            <img class="d-block w-100" src="images/SCALI_ST1_14_Vignette_B_GIFT_R1.jpg"
-                                alt="Image 2">
-                        </picture>
-                    </div>
-                    <div class="swiper-slide">
-                        <picture>
-                            <source srcset="images/carousel-2/mobile-3.jpg" media="(max-width: 960px)" />
-                            <img class="d-block w-100" src="images/SCALI_ST1_13_Vignette_A_GIFT_R1.jpg"
-                                alt="Image 3">
-                        </picture>
+
+                    <div class="navigation">
+                        <div class="navigation-button navigation-button-prev swiper-button-prev">
+                            <span></span>
+                        </div>
+                        <div class="navigation-button navigation-button-next swiper-button-next">
+                            <span></span>
+                        </div>
                     </div>
                 </div>
 
-                <div class="navigation">
-                    <div class="navigation-button navigation-button-prev swiper-button-prev">
-                        <span></span>
-                    </div>
-                    <div class="navigation-button navigation-button-next swiper-button-next">
-                        <span></span>
+                <!-- Logo no canto inferior direito -->
+                <div class="your-life-in-focus">
+                    <img src="images/S.png" alt="Imagem S">
+                    <div>
+                        YOUR LIFE <span> IN FOCUS.</span>
                     </div>
                 </div>
-            </div>
-
-            <!-- Logo no canto inferior direito -->
-            <div class="your-life-in-focus">
-                <img src="images/S.png" alt="Imagem S">
-                <div>
-                    YOUR LIFE <span> IN FOCUS.</span>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
 
         <section id="nine" class="main  right dark fullscreen split-section ">
             <div class="left-half">
             </div>
-			<div class="right-half section-nap-scroll">
-				<h4>REGISTER TODAY</h4>
-				<p class="parag3">Make Scale your new home and enjoy life in balance. Our sales team will reach out to
-					you soon with additional information. </p>
+            <div class="right-half section-nap-scroll">
+                <h4>REGISTER TODAY</h4>
+                <p class="parag3">Make Scale your new home and enjoy life in balance. Our sales team will reach out to
+                    you soon with additional information. </p>
 
-				<form action="/api/enviar-formulario" method="post" class="par-form" id="form-contato">
-					<label for="fname">First name*</label>
-					<input type="text" id="fname" name="fname" class="text-input" required>
+                <form action="/api/enviar-formulario" method="post" class="par-form" id="form-contato">
+                    <label for="fname">First name*</label>
+                    <input type="text" id="fname" name="fname" class="text-input" required>
 
-					<label for="lname">Last name*</label>
-					<input type="text" id="lname" name="lname" class="text-input" required>
+                    <label for="lname">Last name*</label>
+                    <input type="text" id="lname" name="lname" class="text-input" required>
 
-					<label for="email">E-mail*</label>
-					<input type="email" id="email" name="email" class="text-input" required>
+                    <label for="email">E-mail*</label>
+                    <input type="email" id="email" name="email" class="text-input" required>
 
-					<label for="phone">Phone*</label>
-					<input type="tel" id="phone" name="phone" class="text-input" required>
+                    <label for="phone">Phone*</label>
+                    <input type="tel" id="phone" name="phone" class="text-input" required>
 
-					<label for="city">City of residence*</label>
-					<input type="text" id="city" name="city" class="text-input" required>
-					<label for="hearAbout">How did you hear about us?</label>
-					<select id="hearAbout" name="hearAbout" class="text-input" required>
-						<option class="text-input10" value=" "> </option>
-						<option class="text-input10" value="Livabl">Livabl</option>
-						<option class="text-input10" value="Facebook/Instagram">Facebook/Instagram</option>
-						<option class="text-input10" value="Google">Google</option>
-						<option class="text-input10" value="Fifth Ave">Fifth Ave</option>
-						<option class="text-input10" value="Newspaper">Newspaper</option>
-						<option class="text-input10" value="Radio">Radio</option>
-						<option class="text-input10" value="Print ads">Print ads</option>
-						<option class="text-input10" value="Signage">Signage</option>
-						<option class="text-input10" value="Realtor">Realtor</option>
-						<option class="text-input10" value="Family/Friends">Family/Friends</option>
-						<option class="text-input10" value="Other">Other</option>
-					</select>
-					<div class="div-flex text-input" style="align-items: center; padding-right: 15em;">
-						<label for="realtorCheckbox"
-							style="padding-right: 1em;font-weight: bold;font-size: 0.95em;padding-bottom: 0.5em;padding-top: 0.6em;">
-							ARE YOU A REALTOR?</label>
-						<input type="radio" id="yesRealtorCheckbox" name="areYouRealtor" value="yes"
-							class="radio-check">
-						<label for="yesRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">YES</label>
-						<input type="radio" id="noRealtorCheckbox" name="areYouRealtor" value="no" class="radio-check">
-						<label for="noRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">NO</label>
-					</div>
+                    <label for="city">City of residence*</label>
+                    <input type="text" id="city" name="city" class="text-input" required>
+                    <label for="hearAbout">How did you hear about us?</label>
+                    <select id="hearAbout" name="hearAbout" class="text-input" required>
+                        <option class="text-input10" value=" "> </option>
+                        <option class="text-input10" value="Livabl">Livabl</option>
+                        <option class="text-input10" value="Facebook/Instagram">Facebook/Instagram</option>
+                        <option class="text-input10" value="Google">Google</option>
+                        <option class="text-input10" value="Fifth Ave">Fifth Ave</option>
+                        <option class="text-input10" value="Newspaper">Newspaper</option>
+                        <option class="text-input10" value="Radio">Radio</option>
+                        <option class="text-input10" value="Print ads">Print ads</option>
+                        <option class="text-input10" value="Signage">Signage</option>
+                        <option class="text-input10" value="Realtor">Realtor</option>
+                        <option class="text-input10" value="Family/Friends">Family/Friends</option>
+                        <option class="text-input10" value="Other">Other</option>
+                    </select>
+                    <div class="div-flex text-input" style="align-items: center; padding-right: 15em;">
+                        <label for="realtorCheckbox"
+                            style="padding-right: 1em;font-weight: bold;font-size: 0.95em;padding-bottom: 0.5em;padding-top: 0.6em;">
+                            ARE YOU A REALTOR?</label>
+                        <input type="radio" id="yesRealtorCheckbox" name="areYouRealtor" value="yes"
+                            class="radio-check">
+                        <label for="yesRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">YES</label>
+                        <input type="radio" id="noRealtorCheckbox" name="areYouRealtor" value="no" class="radio-check">
+                        <label for="noRealtorCheckbox" style="padding-right: 1em;padding-left: 0.3em;">NO</label>
+                    </div>
 
 
-					<div class="div-flex text-input">
-						<label for="contact-method" 
-                        style="padding-right: 1em;font-weight: bold;font-size: 0.95em;padding-bottom: 0.5em;padding-top: 0.6em;">
-							HOW WOULD YOU LIKE <br class="mobile-only">TO BE CONTACTED?</label>
+                    <div class="div-flex text-input">
+                        <label for="contact-method"
+                            style="padding-right: 1em;font-weight: bold;font-size: 0.95em;padding-bottom: 0.5em;padding-top: 0.6em;">
+                            HOW WOULD YOU LIKE <br class="mobile-only">TO BE CONTACTED?</label>
 
-						<input type="checkbox" id="checkbox-phone" name="contact-method" value="Phone">
-						<label for="checkbox-phone" style="padding-right: 1em;padding-left: 0.3em;">Phone</label>
+                        <input type="checkbox" id="checkbox-phone" name="contact-method" value="Phone">
+                        <label for="checkbox-phone" style="padding-right: 1em;padding-left: 0.3em;">Phone</label>
 
-						<input type="checkbox" id="email" name="contact-method" value="E-mail">
-						<label for="email"
-							style="padding-right: 1em;padding-left: 0.3em;white-space: nowrap;">E-mail</label>
+                        <input type="checkbox" id="email" name="contact-method" value="E-mail">
+                        <label for="email"
+                            style="padding-right: 1em;padding-left: 0.3em;white-space: nowrap;">E-mail</label>
 
-						<input type="checkbox" id="text" name="contact-method" value="Text">
-						<label for="text" style="padding-right: 1em;padding-left: 0.3em;">Text</label>
-					</div>
+                        <input type="checkbox" id="text" name="contact-method" value="Text">
+                        <label for="text" style="padding-right: 1em;padding-left: 0.3em;">Text</label>
+                    </div>
 
                     <div class="consentTerm div-flex">
                         <div class="Checkboxers">
@@ -502,8 +504,7 @@
             <div class="footer-row">
                 <p class="privacy">
                     Copyright &copy; 2023 Scale Projects
-                    <a href="javascript:void(0)"
-                        style="white-space: nowrap; text-decoration: underline;"
+                    <a href="javascript:void(0)" style="white-space: nowrap; text-decoration: underline;"
                         onclick="openPrivacyModal2()">Privacy
                         Policy</a>
                 </p>
