--- a/public/index.html
+++ b/public/index.html
@@ -335,9 +335,8 @@
 				"firstName": document.getElementById('fname').value,
 				"lastName": document.getElementById('lname').value,
 			},
-			"emails": document.querySelectorAll('input[name="email"]'),
-			"phones": document.querySelectorAll('input[name="phone"]'),
-			"city": document.getElementById('city').value,
+			"email": document.getElementById('email').value.split(',').map(email => email.trim()),
+			"phone": document.getElementById('phone').value.split(',').map(phone => phone.trim()),
 			"hearAbout": document.getElementById('hearAbout').value,
 			"areYouRealtor": document.querySelector('input[name="areYouRealtor"]:checked').value,
 			"contactMethod": Array.from(document.querySelectorAll('input[name="contact-method"]:checked')).map(cb => cb.value),
