refactor: Esconde história

--- a/public/scali.html
+++ b/public/scali.html
@@ -428,7 +428,7 @@
             </div>
         </section>
 
-        <section id="eleven" class="main  right dark fullscreen section-nap-scroll">
+        <!-- <section id="eleven" class="main  right dark fullscreen section-nap-scroll">
             <div class="left-section11">
                 <p class="tale11">
                     <span style="color: #5a7b9c;">
@@ -480,7 +480,7 @@
                         May you find your own balance, and always set sail</b>
                 </p>
             </div>
-        </section>
+        </section> -->
 
         <footer id="footer" class="section-nap-scroll">
             <div class="footer-row">
