refactor: Ajustes textuais

--- a/public/scali.html
+++ b/public/scali.html
@@ -88,18 +88,28 @@
         <section id="one" class="main style2 right dark fullscreen section-nap-scroll">
             <div class=" box style2">
                 <div class="about">
-                    <p>Life is a delightful, unpredictable rollercoaster.</p>
-                    <p>It’s those days when you’re rushing to work, and you spill coffee on your
-                        brand-new shirt. Or when you hit “reply all” by mistake in a company email.</p>
-                    <p>But guess what?</p>
-                    <p>At the end of the day, you will be back home.</p>
-                    <p>You’ll be back to your sanctuary of laughter, warmth, and absolute safety.</p>
-                    <p>You return home after a day that felt like a never-ending sitcom of mishaps.</p>
-                    <p>Maybe you accidentally left your umbrella on the train, and the rain got the
-                        best of you. But as you step through your front door, that incredible feeling
-                        of relief washes over you.</p>
-                    <p>Your home is your haven, where the mishaps of the day melt away into jokes
-                        you’ll laugh about later.</p>
+                    <p>
+                        In the whirlwind of life's demands and unpredictability, finding equilibrium can often seem like
+                        an elusive dream. The constant hustle and bustle of the outside world can leave us feeling
+                        overwhelmed, yearning for a sanctuary where tranquility reigns supreme.
+                    </p>
+                    <p>
+                        That's why we've crafted a haven, a place where balance is not just a concept but a tangible,
+                        everyday reality.
+                    </p>
+                    <p>
+                        Imagine coming home to a space that welcomes you with open arms—a space meticulously designed to
+                        be your refuge from the noise of the outside world. Our condo units are a testament to the art
+                        of harmonious living. Step inside, and you'll immediately sense the calming atmosphere, a
+                        carefully curated blend of aesthetics and functionality. We believe that your home should be a
+                        place where you can recharge and rejuvenate, ready to face the challenges of the next day.
+                    </p>
+                    <p>
+                        Our commitment to creating spaces that promote well-being is evident in every detail, from the
+                        thoughtful layout to meticulously designed amenities. "Balance is a Lifestyle" is more than just
+                        a theme—it's a reality waiting for you at Scale by Scale Projects.
+                    </p>
+
                     <a href="#nine">
                         <button class=" register">REGISTER NOW</button>
                     </a>
@@ -153,7 +163,7 @@
             </div>
         </section>
 
-        <section id="four" class="main  right dark fullscreen split-section-horizon section-nap-scroll">
+        <section id="four" class="main  right dark section-nap-scroll">
 
             <h3 class="location mobile-only">
                 LOCATION</h3>
@@ -213,10 +223,10 @@
                     </div>
                 </div>
                 <div class="right-section7">
-                    <p class="about quiet4">Whether you're leaving for a
-                        weekend trip or coming home
-                        from Disneyland, home is the
-                        comfort of your soul.</p>
+                    <p class="about quiet4">
+                        Whether you're leaving for a weekend trip or coming home from a stressful day at work, your home
+                        is your sanctuary
+                    </p>
                     <img src="images/bags_family.png" alt="bags_family" class="bags_family">
                     <a href="#nine">
                         <button class="button style2">REGISTER TODAY</button></a>
@@ -417,13 +427,13 @@
             </div>
             <div>
                 <p class="blue-text">
-                    At Scale Projects, we are dedicated to developing and
-                    constructing inclusive communities that foster a
-                    sense of belonging among real people. By prioritising
-                    collaborative designs and sustainable infrastructure,
-                    we aim to create vibrant neighbourhoods that support
-                    the needs and aspirations of our residents. And, we do
-                    this all in-house, from conception to completion.
+                    At Scale Projects, we are devoted to cultivating inclusive communities that resonate with authentic
+                    human connections. We strive to foster a vibrant environment where residents truly feel a sense of
+                    belonging, where their needs and aspirations are not only acknowledged but woven into the fabric of
+                    our creations. What sets us apart is our end-to-end approach—from the initial spark of an idea to
+                    the final touches of completion, all done in-house. This ensures that every detail aligns seamlessly
+                    with our vision, creating communities that stand as testaments to thoughtful design and genuine
+                    community engagement.
                 </p>
             </div>
         </section>
