fix: Ajusta a moldura da imagem para algo no CSS

--- a/public/scali.html
+++ b/public/scali.html
@@ -205,8 +205,10 @@
         </section>
 
         <section id="six" class="main  right dark fullscreen section-nap-scroll">
-            <img src="images/scale-sec6.png" class="amenities-logo">
-            <img src="images/SCALI_01_Hero_Streetscape.jpg" alt="Streetscape" class="Streetscape_image">
+            <div class="Streetscape_image">
+                <img src="images/scale-sec6.png" class="amenities-logo">
+            <img src="images/SCALI_01_Hero_Streetscape.jpg" alt="Streetscape" width="100%">
+            </div>
             <h3 class="amenities">
                 <div class="textAmenitties">ENJOY OUR AMENITIES</div>
                 <img src="images/amenities.png" alt="Amenities" width="100%">
